# GL2D

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: tests.yml
Demos/ECS Platformer/: CMakeLists.txt  main.cpp
Demos/The Lost Heroin/: CMakeLists.txt
Demos/The Lost Heroin/Shaders/: cookie_default.frag  lighting.frag  particle.frag  particle.vert
Demos/The Lost Heroin/assets/config/: feelings.json
Demos/The Lost Heroin/assets/women/Enchantress/: animations.json
Demos/The Lost Heroin/assets/women/Knight/: animations.json
Demos/The Lost Heroin/assets/women/Musketeer/: animations.json
Demos/The Lost Heroin/design/: 00-Overview.md  01-Vision.md  02-StoryBible.md  03-BeatBible.md  04-EnvironmentBible.md  05-Cinematography.md  06-PuzzleBible.md  07-GameplayProgression.md  08-ArtDirection.md  09-AudioDirection.md  10-GreyboxGuide.md  11-AssetRequirements.md  12-PolishLibrary.md  13-GL2DFeatureRequirements.md  TODO.md
Demos/The Lost Heroin/src/: Game.cpp  Game.hpp  InputController.cpp  InputController.hpp  Player.cpp  Player.hpp  SceneBuilder.cpp  SceneBuilder.hpp  main.cpp
Shaders/: bloom_blur.frag  fragment.frag  fullscreen.vert  post_composite.frag
Testing/: AISystemTests.cpp  AnimationMetadataTests.cpp  AssetRegistryTests.cpp  BehaviourTreeTests.cpp  BroadphaseBVHTests.cpp  CameraDirectorTests.cpp  CharacterMotorTests.cpp  ClimbingSystemTests.cpp  CollisionDispatcherTests.cpp  DialogueSystemTests.cpp  ECSAnimationLoaderTests.cpp  ECSAnimationTests.cpp  ECSLightingTests.cpp  ECSParticleTests.cpp  ECSPlatformerIntegrationTests.cpp  ECSRegistryTests.cpp  EcsTestOutput.hpp  FeelingsSystemTests.cpp  FixedStepClockTests.cpp  InputEventBusTests.cpp  KinematicCharacterPhysicsTests.cpp  LevelRuntimeTests.cpp  NavMeshTests.cpp  ParallaxSystemTests.cpp  ParticleEffectLoaderTests.cpp  PhysicsCastsTests.cpp  PhysicsEngineTests.cpp  QuadtreeTests.cpp  RenderInterpolationTests.cpp  RigidBodyTests.cpp  RopePhysicsTests.cpp  SimpleJsonTests.cpp  StabilityTests.cpp  TimelineTests.cpp  TriggerCollisionTests.cpp  UIStabilityTests.cpp  WaterSystemTests.cpp  testingGameObject.cpp
assets/character/: animations.json
assets/config/: feelings.json  input_bindings.json  particles.json  player_settings.json  ui_pause.json
assets/levels/: level1.json
build-prof/: CMakeCache.txt  Makefile  cmake_install.cmake
build-prof/Shaders/: bloom_extract.frag  fragment.frag  lighting.frag  lighting.vert  particle.frag  post_composite.frag  ui.frag  ui.vert
docs/: AI.md  AnimationMetadata.md  AudioUIBacklog.md  CameraGameFeel.md  CharacterMotor.md  ClimbingAndRopes.md  ContentRuntime.md  DebugRendering.md  ECSAnimation.md  ECSArchitecture.md  ECSLighting.md  ECSParticles.md  EngineStatus.md  Feelings.md  GpuResourceLifetime.md  InputBacklog.txt  LevelBuildingBacklog.md  Physics.md  PlayerConfig.md  PostProcessing.md  RenderingBacklog.md  UI.md
editor/: CMakeLists.txt  main.cpp
editor/FileExplorer/: FileExplorer.cpp  FileExplorer.hpp
editor/widgets/: EditorWidget.cpp  EditorWidget.hpp  IAttachable.hpp  IResizable.hpp
src/AISystem/: AIBlackboard.hpp  AICombatBrain.cpp  AICombatBrain.hpp  AIEntity.hpp  AIManager.hpp  AIPlayerController.cpp  AIPlayerController.hpp  BehaviourTree.hpp  BehaviourTree.inl  Perception.cpp  Perception.hpp
src/AudioSystem/: AudioManager.cpp  AudioManager.hpp
src/Config/: GameConfig.cpp  GameConfig.hpp
src/Debug/: DebugOverlay.cpp  DebugOverlay.hpp
src/ECS/: Entity.hpp  Registry.hpp
src/Engine/: BoatController.cpp  BoatController.hpp  CharacterController.cpp  CharacterController.hpp  ClimbController.cpp  ClimbController.hpp  DialogueSystem.cpp  DialogueSystem.hpp  FixedStepClock.hpp  IController.hpp  PlayerController.cpp  PlayerController.hpp  RopeHangComponent.cpp  RopeHangComponent.hpp  Scene.cpp  Scene.hpp  SwimmingComponent.cpp  SwimmingComponent.hpp  Timeline.cpp  Timeline.hpp  VehicleController.cpp  VehicleController.hpp  VehicleMountComponent.cpp  VehicleMountComponent.hpp
src/Exceptions/: AnimationException.hpp  Gl2DException.hpp  ShaderException.hpp  SubsystemExceptions.hpp  TextureException.hpp  WindowException.hpp
src/FeelingsSystem/: FeelingSnapshot.cpp  FeelingSnapshot.hpp  FeelingsController.cpp  FeelingsController.hpp  FeelingsLoader.cpp  FeelingsLoader.hpp  FeelingsManager.hpp  FeelingsSystem.cpp  FeelingsSystem.hpp
src/GameObjects/: Component.hpp  Entity.cpp  Entity.hpp  IComponent.hpp  Mesh.cpp  Mesh.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  Vertex.hpp
src/Graphics/: Animation.cpp  Animation.hpp  AnimationState.cpp  AnimationState.hpp  Frame.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
src/InputSystem/: IInputCommand.hpp  InputBindingsLoader.cpp  InputBindingsLoader.hpp  InputCommandRegistry.cpp  InputCommandRegistry.hpp  InputEventBus.cpp  InputEventBus.hpp  InputService.cpp  InputService.hpp  InputTypes.hpp
src/LevelBuildingSystem/: Level.hpp  LevelBuilder.cpp  LevelBuilder.hpp  LevelLoader.cpp  LevelLoader.hpp  LevelManager.cpp  LevelManager.hpp  LevelSchema.hpp  Tileset.hpp
src/Loaders/: AnimationMetadataLoader.cpp  AnimationMetadataLoader.hpp
src/Managers/: AnimationStateMachine.cpp  AnimationStateMachineManager.cpp  AnimationStateMachineManager.hpp  Animator.cpp  Animator.hpp  AnimatorManager.cpp  AnimatorManager.hpp  ComponentFactory.cpp  ComponentFactory.hpp  SpriteManager.cpp  SpriteManager.hpp  TextureManager.cpp  TextureManager.hpp  TilemapManager.cpp  TilemapManager.hpp  TilesetManager.cpp  TilesetManager.hpp
src/ParticleSystem/: Particle.hpp  ParticleEffectLoader.cpp  ParticleEffectLoader.hpp  ParticleEffectSystem.cpp  ParticleEffectSystem.hpp  ParticleEmitter.cpp  ParticleEmitter.hpp  ParticleEmitterConfig.cpp  ParticleEmitterConfig.hpp  ParticleSystem.cpp  ParticleSystem.hpp
src/Physics/: BroadphaseBVH.cpp  BroadphaseBVH.hpp  PhysicsCasts.cpp  PhysicsCasts.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  PhysicsUnits.hpp  Quadtree.cpp  (+7 more)
tools/: animation_profiles.json  ecs_benchmark.cpp  generate_animation_metadata.py  normal_from_sprite.py  scene_benchmark.cpp
(+164 files in other folders)
